dark mode OpenGraph 4

--- a/dark-mode/dark-mode.css
+++ b/dark-mode/dark-mode.css
@@ -8,7 +8,7 @@
     --background-color: #CDB380;
     --text-color: #036564;
     --background-button: black;
-    --color-button-init: white;
+    --color-button-init: black;
     --color-button-hover: white;
 }
 
